word wrapping fix

--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -27,6 +27,7 @@
 
   
   .task-span{
+    display: block;
     margin-top: auto;
     margin-bottom: auto;
     margin-left: 10px;
